--- a/AudioVideoDemo/InfoSet/Localizable/en.lproj/Localizable.strings
+++ b/AudioVideoDemo/InfoSet/Localizable/en.lproj/Localizable.strings
@@ -9,3 +9,6 @@ setting.root.title="Settings";
 setting.language.list.title="Language";
 setting.language.chinese="Chinese";
 setting.language.english="English";
+
+// MARK: - AudioVideo
+audio.video.encoder.lame="Lame";
