--- a/AudioVideoDemo/InfoSet/Localizable/zh-Hans.lproj/Localizable.strings
+++ b/AudioVideoDemo/InfoSet/Localizable/zh-Hans.lproj/Localizable.strings
@@ -12,3 +12,4 @@ setting.language.english="英文";
 
 // MARK: - AudioVideo
 audio.video.encoder.lame="Lame";
+audio.video.encoder.audio.unit="AudioUnit";
